--- a/flaskblog/templates/layoutx.html
+++ b/flaskblog/templates/layoutx.html
@@ -30,9 +30,9 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-        <a href="{{url_for('home')}}" style="text-decoration:none"> <div class="sidebar-heading">Money Reach </div></a>
+        <a href="{{url_for('main.home')}}" style="text-decoration:none"> <div class="sidebar-heading">Money Reach </div></a>
       <div class="list-group list-group-flush">
-        <a href="{{url_for('home')}}" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+        <a href="{{url_for('main.home')}}" class="list-group-item list-group-item-action bg-light">Dashboard</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
@@ -56,10 +56,10 @@
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             {% if current_user.is_authenticated %}
             <li class="nav-item active">
-              <a class="nav-link" href="{{url_for('account')}}">Account  <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{{url_for('users.account')}}">Account  <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('login')}}">Logout</a>
+              <a class="nav-link" href="{{url_for('users.login')}}">Logout</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -74,10 +74,10 @@
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('login')}}">Login</a>
+              <a class="nav-link" href="{{url_for('users.login')}}">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('register')}}">Register</a>
+              <a class="nav-link" href="{{url_for('users.register')}}">Register</a>
             </li>
             {% endif %}
             
