--- a/flaskblog/templates/transferlayout.html
+++ b/flaskblog/templates/transferlayout.html
@@ -45,10 +45,10 @@
 
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
-      <a href="{{url_for('dash')}}" style="text-decoration:none"> <div class="sidebar-heading">Money Reach </div></a>
+      <a href="{{url_for('main.dash')}}" style="text-decoration:none"> <div class="sidebar-heading">Money Reach </div></a>
       <div class="list-group list-group-flush">
         <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-        <a href="{{url_for('transfer')}}" class="list-group-item list-group-item-action bg-light">Send Money</a>
+        <a href="{{url_for('main.transfer')}}" class="list-group-item list-group-item-action bg-light">Send Money</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Trabsaction History</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Earn Points</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Redeem Points</a>
@@ -71,10 +71,10 @@
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             {% if current_user.is_authenticated %}
             <li class="nav-item active">
-              <a class="nav-link" href="{{url_for('account')}}">Account  <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{{url_for('users.account')}}">Account  <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="{{url_for('logout')}}">Logout<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{{url_for('users.logout')}}">Logout<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -89,10 +89,10 @@
             </li>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('login')}}">Login</a>
+              <a class="nav-link" href="{{url_for('users.login')}}">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('register')}}">Register</a>
+              <a class="nav-link" href="{{url_for('users.register')}}">Register</a>
             </li>
             {% endif %}
             
