--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -1,19 +1,21 @@
 {% extends "accountlayout.html" %}
 {% block content %}
+
+
 <div class="content-section">
     <div class="media">
       <img class="rounded-circle account-img" src="{{image_file}}">
       <div class="media-body">
         <h2 class="account-heading">{{current_user.username}}</h2>
-        <h5 class="sub-header">Account Balance : ${{current_user.balance}}</h5>
-        <p class="text-secondary">{{current_user.email}}</p>
+        <h2 class="sub-header">Account Balance : ${{current_user.balance}}</h2>
+        <h3 class="text-secondary">{{current_user.email}}</h3>
       </div>
     </div>
     <div class = "content-section"> 
         <form method= "POST" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }} 
             <fieldset class = "form-group">
-             <legend class="border-bottom mb-4">Account Info</legend>
+             <legend class="border-bottom mb-4">Account Overview</legend>
              <div class="form-group"> 
                  {{ form.username.label(class="form-control-label") }}
      
