--- a/flaskblog/templates/transfer.html
+++ b/flaskblog/templates/transfer.html
@@ -1,90 +1,97 @@
 {% extends "accountlayout.html" %}
 {% block content %}
-
-   <div class = "content-section" > 
-     <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-backdrop = "false" data=tabindex= "-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="staticBackdropLabel">CONFIRMATION</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          Are you sure you want to proceed?
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
-          <button type="button" class="btn btn-primary">Yes</button>
+    <h1>Send Money</h1>
+   
+       <div class = "content-section" > 
+         <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-backdrop = "false" data=tabindex= "-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="staticBackdropLabel">CONFIRMATION</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Are you sure you want to proceed?
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">CANCEL</button>
+              <button type="button" class="btn btn-primary">Yes</button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-   <form method= "POST" action="" >
-     {{ form.hidden_tag() }} 
-     
-       <fieldset class = "form-group">
-           
-      
-        <div class="form-group"> 
-            {{ form.username.label(class="form-control-label") }}
-
-            {% if form.username.errors %}
-                    {{ form.username(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback" >
-                            {% for error in form.username.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                    </div>
-            {% else %}
-                {{ form.username(class="form-control form-control-lg") }}
-            {% endif %}
-            
-        </div>
-
-        <fieldset class = "form-group">
-            
+       <form method= "POST" action="" >
+         {{ form.hidden_tag() }} 
+         
+           <fieldset class = "form-group">
+               
+          
             <div class="form-group"> 
-                {{ form.amount.label(class="form-control-label") }}
+                {{ form.username.label(class="form-control-label") }}
     
-                {% if form.amount.errors %}
-                        {{ form.amount(class="form-control form-control-lg is-invalid") }}
+                {% if form.username.errors %}
+                        {{ form.username(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback" >
-                                {% for error in form.amount.errors %}
+                                {% for error in form.username.errors %}
                                     <span>{{ error }}</span>
                                 {% endfor %}
                         </div>
                 {% else %}
-                    {{ form.amount(class="form-control form-control-lg") }}
+                    {{ form.username(class="form-control form-control-lg") }}
                 {% endif %}
                 
             </div>
+    
+            <fieldset class = "form-group">
+                
+                <div class="form-group"> 
+                    {{ form.amount.label(class="form-control-label") }}
         
-       </fieldset>
-       <div class="form-group">
+                    {% if form.amount.errors %}
+                            {{ form.amount(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback" >
+                                    {% for error in form.amount.errors %}
+                                        <span>{{ error }}</span>
+                                    {% endfor %}
+                            </div>
+                    {% else %}
+                        {{ form.amount(class="form-control form-control-lg") }}
+                    {% endif %}
+                    
+                </div>
+                <div class="form-group">
+                    {{ form.note.label(class="form-control-label") }}
+                    {% if form.note.errors %}
+                        {{ form.note(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.note.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.note(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            
+           </fieldset>
+           <div class="form-group">
+               
+               <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#staticBackdrop">
+                {{ form.submit(class="btn btn-outline-info")}}
+              </button>
+           </div>
+    
+    
            
-           <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#staticBackdrop">
-            {{ form.submit(class="btn btn-outline-info")}}
-          </button>
-       </div>
-
-
-       
-
-</form>
-</div>
-<div class="border-top pt-3">
-    <small class="text-muted"> 
-        Already Have An Account?<a  class="ml-2" href="{{ url_for('users.login') }}">Sign In</a>
-    </small>
-</div>
-
-
-
-
-
+    
+    </form>
+    </div>
+    
+    
+          
+      
 {% endblock content %}
-
       
