--- a/flaskblog/templates/layout2.html
+++ b/flaskblog/templates/layout2.html
@@ -29,6 +29,8 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/slick.css')}}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/slicknav.css')}}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
+
+  <link rel="shortcut icon" href="{{ url_for('static', filename='/img/logo3.ico') }}">
   
     {% if title %}
         <title>MoneyReach - {{ title }}</title>
