--- a/flaskblog/templates/layout1.html
+++ b/flaskblog/templates/layout1.html
@@ -14,6 +14,8 @@
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
+    <link rel="shortcut icon" href="{{ url_for('static', filename='/img/logo3.ico') }}">
+
     {% if title %}
         <title>MoneyReach - {{ title }}</title>
     {% else %}
@@ -21,10 +23,17 @@
     {% endif %}
 </head>
 <body>
+  <style>
+    .sidebar-heading {
+      text-align: center;
+    }
+  </style>
     <header class="site-header">
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/">MoneyReach</a>
+          <a class="navbar-brand mr-4" href="/">
+            <img src="{{ url_for('static', filename='/img/logox.png') }}" width="170" height="75">  
+          </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
