--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -56,7 +56,7 @@
         <img src="{{ url_for('static', filename='/img/logox.png') }}" width="170" height="80">
       </div></a>
       <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+        <a href="{{url_for('main.dash')}}" class="list-group-item list-group-item-action bg-light">Dashboard</a>
         <a href="{{url_for('posts.transfer')}}" class="list-group-item list-group-item-action bg-light">Send Money</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Transaction History</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Earn Points</a>
@@ -151,9 +151,9 @@
                       <div class="slider_text">
                           
                           <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
-                              The Simpler and Safer way to Send Money
+                              Sart Sending Right Now.
                           </h3>
-                          <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="portfolio.html">Visit Our Works</a>
+                          <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="{{url_for('posts.transfer')}}">Send Money</a>
                       </div>
                   </div>
               </div>
@@ -168,9 +168,8 @@
                 <div class="col-lg-6">
                     <div class="section_title text-center mb-70">
                         <span class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s" >Services</span>
-                        <h3 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">With more than 20 years of 
-                            experience we can deliver the 
-                            best product design.</h3>
+                        <h3 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">MoneyReach serivices are of 
+                            the highest standard and quality.</h3>
                     </div>
                 </div>
             </div>
@@ -215,7 +214,7 @@
                             <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Empowering individuals </h3>
                             <p class="mid_text wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Money Reach is the safer, easier way to pay and get paid online by friends and family. The service allows anyone to pay in any way they prefer, including through credit cards, bank accounts, without sharing financial information.
                               Located in Kingston, Jamaica, Money Reach was founded in 2020.</p>
-                            <p class="last_text wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">“Function information without cross action media value.</p>
+                            <!--<p class="last_text wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">“Function information without cross action media value.</p>-->
                             <a href="#" class="boxed-btn3 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">About Us</a>
                         </div>
                     </div>
@@ -230,7 +229,7 @@
                 <div class="col-lg-6">
                     <div class="section_title text-center mb-90">
                         <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">Get in Touch</h3>
-                        <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Tour function information without cross action media value quickly maximize timely deliverables.</p>
+                        <!--<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Tour function information without cross action media value quickly maximize timely deliverables.</p>-->
                     </div>
                 </div>
             </div>
