--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -6,8 +6,14 @@
     <div class="media">
       <img class="rounded-circle account-img" src="{{image_file}}">
       <div class="media-body">
-        <h2 class="account-heading">{{current_user.username}}</h2>
-        <h2 class="sub-header">Account Balance : ${{current_user.balance}}</h2>
+<div class="card bg-primary text-white" style="width:100px">
+    <div class="card-body"><h2>{{current_user.username}}</h2></div>
+ 
+        
+ </div>
+	<div class="card bg-info text-white " style="width:400px">
+    	<div class="card-body"> <h2 class="sub-header">Account Balance : ${{current_user.balance}}</h2></div>
+  	</div>
         <h3 class="text-secondary">{{current_user.email}}</h3>
       </div>
     </div>
