--- a/flaskblog/templates/accountlayout.html
+++ b/flaskblog/templates/accountlayout.html
@@ -55,7 +55,7 @@
     <div class="bg-light border-right" id="sidebar-wrapper">
       <a href="{{url_for('main.dash')}}" style="text-decoration:none" > <div class="sidebar-heading"><img src="{{ url_for('static', filename='/img/logox.png') }}" width="170" height="80"></div></a>
       <div class="list-group list-group-flush">
-        <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+        <a href="{{url_for('main.dash')}}" class="list-group-item list-group-item-action bg-light">Dashboard</a>
         <a href="{{url_for('posts.transfer')}}" class="list-group-item list-group-item-action bg-light">Send Money</a>
         <a href="{{url_for('main.history')}}" class="list-group-item list-group-item-action bg-light">Trabsaction History</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Earn Points</a>
