--- a/flaskblog/templates/layout2.html
+++ b/flaskblog/templates/layout2.html
@@ -112,10 +112,9 @@
                       <div class="slider_text">
                           
                           <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididun
-                            ea commodo consequat.
+                            Money Reach. Fast, Simple, Reliable. Send money to friends and loved ones instantly.
                           </h3>
-                          <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="portfolio.html">Visit Our Works</a>
+                          <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="{{url_for('users.register')}}">Sign Up Today</a>
                       </div>
                   </div>
               </div>
@@ -130,9 +129,9 @@
             <div class="col-lg-6">
                 <div class="section_title text-center mb-70">
                     <span class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s" >Services</span>
-                    <h3 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">With more than 20 years of 
-                        experience we can deliver the 
-                        best product design.</h3>
+                    <h3 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">MoneyReach serivices are of 
+                        the highest standard and quality.
+                    </h3>
                 </div>
             </div>
         </div>
@@ -142,7 +141,7 @@
                     <div class="icon">
                         <img width="57.826" height="56.087" src="static/img/svg_icon/money.svg" alt="">
                     </div>
-                    <h3>Lorem Ipsum </h3>
+                    <h3>Personal </h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
                 </div>
             </div>
@@ -177,7 +176,7 @@
                         <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Empowering individuals </h3>
                         <p class="mid_text wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Money Reach is the safer, easier way to pay and get paid online by friends and family. The service allows anyone to pay in any way they prefer, including through credit cards, bank accounts, without sharing financial information.
                           Located in Kingston, Jamaica, Money Reach was founded in 2020.</p>
-                        <p class="last_text wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">“Function information without cross action media value."</p>
+                        
                         <a href="#" class="boxed-btn3 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">About Us</a>
                     </div>
                 </div>
@@ -191,14 +190,18 @@
         <div class="row justify-content-center">
             <div class="col-lg-6">
                 <div class="section_title text-center mb-90">
-                    <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">Get in Touch</h3>
-                    <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Tour function information without cross action media value quickly maximize timely deliverables.</p>
+                    <!--<h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">Get in Touch</h3>-->
+        
                 </div>
             </div>
         </div>
+    </div>
+</div>
+    
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="touch_form">
+                    <!--
                     <form action="#">
                         <div class="row">
                             <div class="col-md-6">
@@ -228,6 +231,7 @@
                             </div>
                         </div>
                     </form>
+                -->
                 </div>
             </div>
         </div>
