--- a/flaskblog/templates/card.html
+++ b/flaskblog/templates/card.html
@@ -108,7 +108,7 @@
             <h6>Bank account details</h6>
             <dl>
               <dt>Bank</dt>
-              <dd> THE WORLD BANK</dd>
+              <dd>NATIONAL COMMERCIAL BANK</dd>
             </dl>
             <dl>
               <dt>Account number</dt>
