--- a/flaskblog/templates/history.html
+++ b/flaskblog/templates/history.html
@@ -3,18 +3,31 @@
     <h1>Transaction  History</h1>
 
 
-  {% for post in posts %}
+ 
 
 
-<div class="his">
-<table>
-  <thead ><tr><th>SENT TO</th><th style="padding:0 15px 0 30px">SENT ON</th><th style="padding:0 30px 0 15px">AMT</th><th>NOTE</th></tr></thead>
-  
+
+<table class="table table-hover">
+  <thead >
+    <tr>
+      <th>SENT TO</th>
+      <th>SENT ON</th>
+      <th>AMT</th>
+      <th>NOTE</th>
+  </tr>
+ </thead>
+ {% for post in posts %}
   <tbody>
-  <tr><td>{{post.username }}</td><td style="padding:0 15px 0 30px">{{post.date_posted.strftime('%Y-%m-%d %H:%M')}}</td><td style="padding:0 15px 0 15px">{{ post.amount }}</td><td>{{ post.note }}</td></tr>
+  <tr>
+    <td>{{post.username }}</td>
+    <td>{{post.date_posted.strftime('%Y-%m-%d %H:%M')}}</td>
+    <td>{{ post.amount }}</td>
+    <td>{{ post.note }}</td>
+  </tr>
   
   </tbody>
-  </table>
-</div>
-    {% endfor %}       
+  {% endfor %}
+</table>
+
+           
 {% endblock content %}    
