--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -58,10 +58,10 @@
       <div class="list-group list-group-flush">
         <a href="{{url_for('main.dash')}}" class="list-group-item list-group-item-action bg-light">Dashboard</a>
         <a href="{{url_for('posts.transfer')}}" class="list-group-item list-group-item-action bg-light">Send Money</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Transaction History</a>
+        <a href="{{url_for('main.history')}}" class="list-group-item list-group-item-action bg-light">Transaction History</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Earn Points</a>
         <a href="#" class="list-group-item list-group-item-action bg-light">Redeem Points</a>
-        <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
+        <a href="{{url_for('users.card')}}" class="list-group-item list-group-item-action bg-light">Card</a>
       </div>
     </div>
     <!-- /#sidebar-wrapper -->
