--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -6,7 +6,7 @@
     <div class="media">
       <img class="rounded-circle account-img" src="{{image_file}}">
       <div class="media-body">
-<div class="card bg-primary text-white" style="width:100px">
+<div class="card bg-primary text-white" style="width:115px">
     <div class="card-body"><h2>{{current_user.username}}</h2></div>
  
         
@@ -15,6 +15,9 @@
     	<div class="card-body"> <h2 class="sub-header">Account Balance : ${{current_user.balance}}</h2></div>
   	</div>
         <h3 class="text-secondary">{{current_user.email}}</h3>
+        <h3 class="text-secondary">{{current_user.phonenum}}</h3>
+        
+      
       </div>
     </div>
     <div class = "content-section"> 
