--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -1,5 +1,6 @@
 {% extends "layout1.html" %}
 {% block content %}
+
    <div class = "content-section"> 
    <form method= "POST" action="">
        {{ form.hidden_tag() }} 
@@ -59,6 +60,42 @@
 {% endif %}
 
 </div>
+
+<div class="form-group"> {{ form.phone.label(class="form-control-label") }}
+    {% if form.phone.errors %}
+    {{ form.phone(class="form-control form-control-lg is-invalid") }}
+    <div class="invalid-feedback" >
+            {% for error in form.phone.errors %}
+                <span>{{ error }}</span>
+            {% endfor %}
+    </div>
+{% else %}
+{{ form.phone(class="form-control form-control-lg") }}
+{% endif %}
+{% block scripts %}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.4/js/intlTelInput.min.js"></script>
+    
+<script>
+    var wtf_phone_field = document.getElementById('phone');
+    wtf_phone_field.style.position = 'absolute';
+    wtf_phone_field.style.top = '-9999px';
+    wtf_phone_field.style.left = '-9999px';
+    wtf_phone_field.parentElement.insertAdjacentHTML('beforeend', '<div><input type="tel" id="_phone"></div>');
+    var fancy_phone_field = document.getElementById('_phone');
+    var fancy_phone_iti = window.intlTelInput(fancy_phone_field, {
+        separateDialCode: true,
+        utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.4/js/utils.js",
+    });
+    fancy_phone_iti.setNumber(wtf_phone_field.value);
+    fancy_phone_field.addEventListener('blur', function() {
+        wtf_phone_field.value = fancy_phone_iti.getNumber();
+    });
+</script>
+{% endblock %}
+
+</div>
+
        </fieldset>
        <div class="form-group">
            {{ form.submit(class="btn btn-outline-info")}}
@@ -74,4 +111,4 @@
 </div>
       
 {% endblock content %}
-      
+
